ext/ply/test/lex_dup1.exp
./lex_dup1.py:17: Rule t_NUMBER redefined. Previously defined on line 15
SyntaxError: lex: Unable to build lexer.
